Сделан блок header-top

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link href="css/style.css" rel="stylesheet">
   <title>Интернет-магазин гаджетов - DEVICE</title>
 </head>
-<body>
-  <header class="header header__position">
+<body class="wrapper">
+  <header class="header wrapper__header">
     <h1 class="visually-hidden">Интернет магазин гаджетов - DEVICE</h1>
     <div class="header__header-top header-top">
       <a class="header__logo logo">
-        <img src="img/logo.png" width="163" height="36" alt="Логотип интернет-магазина Device">
+        <img class="logo__image" src="img/logo.png" width="163" height="36" alt="Логотип интернет-магазина Device">
       </a>
       <form class="header-top__main-search main-search">
         <label class="main-search__icon-search" for="search-input" aria-label="Форма поиска"></label>
