--- a/catalog.html
+++ b/catalog.html
@@ -7,11 +7,11 @@
   <link href="css/style.css" rel="stylesheet">
   <title>Интернет-магазин гаджетов - DEVICE</title>
 </head>
-<body>
-  <header class="header header__position">
+<body class="wrapper">
+  <header class="header wrapper__header">
     <div class="header__header-top header-top">
       <a href="index.html" class="header__logo logo">
-        <img src="img/logo.png" width="163" height="36" alt="Логотип интернет-магазина Device">
+        <img class="logo__image" src="img/logo.png" width="163" height="36" alt="Логотип интернет-магазина Device">
       </a>
       <form class="header-top__main-search main-search">
         <label class="main-search__icon-search" for="search-input" aria-label="Форма поиска"></label>
@@ -21,7 +21,7 @@
       <div class="header-top__user-menu user-menu">
         <ul class="user-menu__list user-menu__in-account">
           <li class="user-menu__list-item"><a class="user-menu__user-name user-menu__login_color_black" href="#">Валентин Петухов</a></li>
-          <li class="user-menu__list-item"><a class="user-menu__button user-menu__button_color_black user-menu__button_not_active" href="#">Выйти</a></li>
+          <li class="user-menu__list-item"><a class="user-menu__logout user-menu__logout_color_black user-menu__button_not_active" href="#">Выйти</a></li>
         </ul>
       </div>
       <div class="header-top__compare-link compare"><a class="compare__link" href="#">Сравнить</a></div>
