Сделал header-main. Сделан header для index.html и для catalog.html

--- a/index.html
+++ b/index.html
@@ -27,21 +27,27 @@
       <div class="header-top__compare-link compare"><a class="compare__link" href="#">Сравнить</a></div>
       <div class="header-top__cart-link cart"><a class="cart__link" href="#">Корзина</a></div>
     </div>
-    <div class="header-main">
-      <ul class="main-header__site-navigation">
-        <li class="main-header__site-navigation-item site-navigation-item"><a href="#" aria-label="Каталог товаров">Каталог товаров</a>
-          <ul class="site-navigation-item__submenu">
-            <li><a href="#">Виртуальная реальность</a></li>
-            <li><a href="catalog.html">Моноподы для селфи</a></li>
-            <li><a href="#">Экшн-камеры</a></li>
-            <li><a href="#">Фитнеc-браслеты</a></li>
-            <li><a href="#">Умные часы</a></li>
-            <li><a href="#">Квадрокоптеры</a></li>
-          </ul>
+     <div class="header-main">
+      <ul class="header-main__site-navigation site-navigation">
+        <li class="site-navigation__item site-navigation-item"><a class="site-navigation__link" href="#" aria-label="Каталог товаров">Каталог товаров</a>
+          <div class="site-navigation-item__submenu">
+            <div class="site-navigation-item__submenu-item">
+              <a class="site-navigation__link" href="#">Виртуальная реальность</a>
+              <a class="site-navigation__link" href="catalog.html">Моноподы для селфи</a>
+              <a class="site-navigation__link" href="#">Экшн-камеры</a>
+            </div>
+            <div class="site-navigation-item__submenu-item">
+              <a class="site-navigation__link" href="#">Фитнеc-браслеты</a>
+              <a class="site-navigation__link" href="#">Умные часы</a>
+            </div>
+            <div class="site-navigation-item__submenu-item">
+              <a class="site-navigation__link" href="#">Квадрокоптеры</a>
+            </div>
+          </div>
         </li>
-        <li class="main-header__site-navigation-item"><a href="#">Доставка</a></li>
-        <li class="main-header__site-navigation-item"><a href="#">Гарантия</a></li>
-        <li class="main-header__site-navigation-item"><a href="#">Контакты</a></li>
+        <li class="site-navigation__item"><a class="site-navigation__link" href="#">Доставка</a></li>
+        <li class="site-navigation__item"><a class="site-navigation__link" href="#">Гарантия</a></li>
+        <li class="site-navigation__item"><a class="site-navigation__link" href="#">Контакты</a></li>
       </ul>
     </div>
   </header>
