Сделано в слайдере: катинка, описание, кнопка, переключатель.

--- a/index.html
+++ b/index.html
@@ -52,65 +52,65 @@
     </div>
   </header>
   <main>
-    <div class="promo-slider">
-      <input id="slide-1-toggle" type="radio" name="toggle" checked>
-      <input id="slide-2-toggle" type="radio" name="toggle">
-      <input id="slide-3-toggle" type="radio" name="toggle">
+    <div class="wrapper__promo-slider promo-slider">
+      <input class="slide-1-toggle visually-hidden" id="slide-1-toggle" type="radio" name="toggle" checked>
+      <input class="slide-2-toggle visually-hidden" id="slide-2-toggle" type="radio" name="toggle">
+      <input class="slide-3-toggle visually-hidden" id="slide-3-toggle" type="radio" name="toggle">
       <div class="promo-slider__toggle slider-toggle">
-        <label class="slider-toggle__slide-1" for="slide-1-toggle"></label>
-        <label class="slider-toggle__slide-2" for="slide-2-toggle"></label>
-        <label class="slider-toggle__slide-3" for="slide-3-toggle"></label>
+        <label class="slider-toggle__slide_1" for="slide-1-toggle"></label>
+        <label class="slider-toggle__slide_2" for="slide-2-toggle"></label>
+        <label class="slider-toggle__slide_3" for="slide-3-toggle"></label>
       </div>
       <div class="promo-slider__slide slide">
-        <img src="img/promo-slider/image-selfie.png" width="384" height="486" alt="Избражение селфи-палки">
-        <div>
+        <img class="slide__product-image" class="" src="img/promo-slider/image-selfie.png" width="384" height="486" alt="Избражение селфи-палки">
+        <div class="slide__content">
           <p class="slide__slogan">Делай селфи, как Бен Стиллер!</p>
-          <p class="slide__decription">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+          <p class="slide__description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
           <a class="slide__about-product-link" href="#">Подробнее</a>
-          <table class="slide__product-property">
-            <tr>
-              <td>8,5 м</td>
-              <td>5 кг</td>
-              <td>Карбон</td>
+          <table class="slide__product-property table-property">
+            <tr class="table-property__row">
+              <td class="table-property__table-data">8,5 м</td>
+              <td class="table-property__table-data">5 кг</td>
+              <td class="table-property__table-data">Карбон</td>
             </tr>
-            <tr>
-              <th>Длина палки</th>
-              <th>Вес палки</th>
-              <th>Материал</th>
+            <tr class="table-property__row">
+              <th class="table-property__table-head">Длина палки</th>
+              <th class="table-property__table-head">Вес палки</th>
+              <th class="table-property__table-head">Материал</th>
             </tr>
           </table>
         </div>
       </div>
       <div class="promo-slider__slide slide">
-        <img src="img/promo-slider/image-whatch.png" width="345" height="485" alt="Избражение фитнес браслета">
-        <div>
+        <img class="slide__product-image" src="img/promo-slider/image-whatch.png" width="345" height="485" alt="Избражение фитнес браслета">
+        <div class="slide__content">
           <p class="slide__slogan">Худеем правильно!</p>
-          <p class="slide__decription">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+          <p class="slide__description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
           <a class="slide__about-product-link" href="#">Подробнее</a>
-          <table class="slide__product-property">
-            <tr>
-              <td>48 часов</td>
+          <table class="slide__product-property table-property">
+            <tr class="table-property__row">
+              <td class="table-property__table-data">48 часов</td>
             </tr>
-            <tr>
-              <th>Без подзарядки</th>
+            <tr class="table-property__row">
+              <th class="table-property__table-head">Без подзарядки</th>
             </tr>
           </table>
         </div>
       </div>
       <div class="promo-slider__slide slide">
-        <img src="img/promo-slider/image-dron.png" width="526" height="334" alt="Избражение селфи-палки">
-        <div>
+        <img class="slide__product-image" src="img/promo-slider/image-dron.png" width="526" height="334" alt="Избражение селфи-палки">
+        <div class="slide__content">
           <p class="slide__slogan">Порхает как бабочка, жалит как пчела!</p>
-          <p class="slide__decription">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+          <p class="slide__description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
           <a class="slide__about-product-link" href="#">Подробнее</a>
-          <table class="slide__product-property">
-            <tr>
-              <td>800 м</td>
-              <td>50 м</td>
+          <table class="slide__product-property table-property">
+            <tr class="table-property__row">
+              <td class="table-property__table-data">800 м</td>
+              <td class="table-property__table-data">50 м</td>
             </tr>
-            <tr>
-              <th>Дальность полета</th>
-              <th>Радиус поражения</th>
+            <tr class="table-property__row">
+              <th class="table-property__table-head">Дальность полета</th>
+              <th class="table-property__table-head">Радиус поражения</th>
             </tr>
           </table>
         </div>
