Сделал декоративные элементы в слайдере и поправил позиционирование элементов

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         </div>
       </div>
       <div class="promo-slider__slide slide">
-        <img class="slide__product-image" src="img/promo-slider/image-whatch.png" width="345" height="485" alt="Избражение фитнес браслета">
+        <img class="slide__product-image slide__product-image-2_position" src="img/promo-slider/image-whatch.png" width="345" height="485" alt="Избражение фитнес браслета">
         <div class="slide__content">
           <p class="slide__slogan">Худеем правильно!</p>
-          <p class="slide__description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+          <p class="slide__description slide__description-2_max-width">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
           <a class="slide__about-product-link" href="#">Подробнее</a>
           <table class="slide__product-property table-property">
             <tr class="table-property__row">
@@ -98,10 +98,10 @@
         </div>
       </div>
       <div class="promo-slider__slide slide">
-        <img class="slide__product-image" src="img/promo-slider/image-dron.png" width="526" height="334" alt="Избражение селфи-палки">
+        <img class="slide__product-image slide__product-image-3_position" src="img/promo-slider/image-dron.png" width="526" height="334" alt="Избражение селфи-палки">
         <div class="slide__content">
-          <p class="slide__slogan">Порхает как бабочка, жалит как пчела!</p>
-          <p class="slide__description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+          <p class="slide__slogan slide__slogan_max-width">Порхает как бабочка, жалит как пчела!</p>
+          <p class="slide__description slide__description-3_max-width">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
           <a class="slide__about-product-link" href="#">Подробнее</a>
           <table class="slide__product-property table-property">
             <tr class="table-property__row">
