Сделал таблицу свойств товара в слайдере

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <a class="slide__about-product-link" href="#">Подробнее</a>
           <table class="slide__product-property table-property">
             <tr class="table-property__row">
-              <td class="table-property__table-data">800 м</td>
+              <td class="table-property__table-data table-property__table-data_width">800 м</td>
               <td class="table-property__table-data">50 м</td>
             </tr>
             <tr class="table-property__row">
