сделал блок popular-sections

--- a/index.html
+++ b/index.html
@@ -116,16 +116,18 @@
         </div>
       </div>
     </div>
-    <section>
-      <h2 class="viseualli-hidden">Популярые разделы</h2>
-      <ul class="popular-sections">
-        <li class="popular-sections__item"><a href="#">Виртуальная реальность</a></li>
-        <li class="popular-sections__item"><a href="catalog.html">Моноподы для селфи</a></li>
-        <li class="popular-sections__item"><a href="#">Экшн-камеры</a></li>
-        <li class="popular-sections__item"><a href="#">Фитнеc-браслеты</a></li>
-        <li class="popular-sections__item"><a href="#">Умные часы</a></li>
-        <li class="popular-sections__item"><a href="#">Квадрокоптеры</a></li>
-      </ul>
+    <section class="wrapper__popular-sections">
+      <div class="wrapper__popular-sections popular-sections">
+        <h2 class="visually-hidden">Популярые разделы</h2>
+        <ul class="popular-sections__list">
+          <li class="popular-sections__item"><a class="popular-sections__link" href="#">Виртуальная реальность</a></li>
+          <li class="popular-sections__item"><a class="popular-sections__link popular-sections__link_text-width" href="catalog.html">Моноподы для селфи</a></li>
+          <li class="popular-sections__item"><a class="popular-sections__link" href="#">Экшн-камеры</a></li>
+          <li class="popular-sections__item"><a class="popular-sections__link" href="#">Фитнеc-браслеты</a></li>
+          <li class="popular-sections__item"><a class="popular-sections__link" href="#">Умные часы</a></li>
+          <li class="popular-sections__item"><a class="popular-sections__link" href="#">Квадрокоптеры</a></li>
+        </ul>
+      </div>
     </section>
     <section class="services-container">
       <input id="delivery" type="radio" name="service" checked>
