--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="format-detection" content="telephone=no">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/normolize.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
@@ -27,7 +28,7 @@
       <div class="header-top__compare-link compare"><a class="compare__link" href="#">Сравнить</a></div>
       <div class="header-top__cart-link cart"><a class="cart__link" href="#">Корзина</a></div>
     </div>
-     <div class="header-main">
+    <div class="header-main">
       <ul class="header-main__site-navigation site-navigation">
         <li class="site-navigation__item site-navigation-item"><a class="site-navigation__link" href="#" aria-label="Каталог товаров">Каталог товаров</a>
           <div class="site-navigation-item__submenu">
@@ -135,44 +136,68 @@
       </div>
     </section>
   </main>
-  <footer class="main-footer">
-    <div class="main-footer__container-left">
-      <a class="main-footer__logo" href="index.html">
-        <img class="main-footer__logo" src="img/logo-footer.png" width="136" height="36" alt="Логотип интернет-магазина Device">
-        <p class="main-footer__adress"></p>
-      </a>
-      <p class="main-footer__adress"></p>
-    </div>
-    <div class="main-footer__container-center">
-      <ul class="main-footer__site-navigation">
-        <li>Доставка</li>
-        <li>Гарантия</li>
-        <li>Контакты</li>
-      </ul>
-      <ul class="main-footer__social-buttons social-buttons">
-        <li><a class="social-buttons__item social-button__fb" href="#" aria-label="Мы в facebook">Фейсбук</a></li>
-        <li><a class="social-buttons__item social-button__inst" href="#" aria-label="Мы в Instagram">Инстаграм</a></li>
-        <li><a class="social-buttons__item social-button__tw" href="#" aria-label="Мы в Twitter">Твиттер</a></li>
-      </ul>
-    </div>
-    <div class="main-footer__container-right">
-      <div>
-        <div class="main-footer__user-menu user-menu">
-          <ul class="user-menu__account_logged">
-            <li><a class="user-menu__button user-menu__button_color_black" href="#">Валентин Петухов</a></li>
-            <li><a class="user-menu__button user-menu__button_color_black user-menu__button_not_active" href="#">Выйти</a></li>
+  <footer class="wrapper__footer-decoration_background">
+    <div class="wrapper__footer footer">
+      <div class="footer__container">
+        <div class="footer__container-left">
+          <a class="footer__logo footer__logo_postion" href="index.html"><img class="footer__logo" src="img/logo-footer.png" width="163" height="36" alt="Логотип интернет-магазина Device"></a>
+          <p class="footer__adress">г. Москва, ул. Строителей, 15</p>
+        </div>
+        <div class="footer__container-center">
+          <ul class="footer__site-navigation footer-navigation">
+            <li class="footer-navigation__item"><a class="footer-navigation__link" href="#">Доставка</a></li>
+            <li class="footer-navigation__item"><a class="footer-navigation__link" href="#">Гарантия</a></li>
+            <li class="footer-navigation__item"><a class="footer-navigation__link" href="#">Контакты</a></li>
+          </ul>
+          <ul class="footer__social-buttons social-buttons">
+            <li class="social-buttons__item"><a class="social-buttons__link social-button__fb" href="#" aria-label="Мы в facebook"></a></li>
+            <li class="social-buttons__item"><a class="social-buttons__link social-button__inst" href="#" aria-label="Мы в Instagram"></a></li>
+            <li class="social-buttons__item"><a class="social-buttons__link social-button__tw" href="#" aria-label="Мы в Twitter"></a></li>
           </ul>
         </div>
-        <div class="compare-link main-footer__compare-link">
-          <a href="#">Сравнить</a>
-        </div>
-        <div class="kart-link main-footer__kart-link">
-          <a href="#">Корзина</a>
+        <div class="footer__container-right">
+          <div class="footer__buttons">
+            <div class="footer__user-menu user-menu">
+              <a class="user-menu__button user-menu__button_color_white" href="#">
+                <svg class="user-menu__icon"  version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="13px" height="12px" viewBox="0 0 13 12" enable-background="new 0 0 13 12" xml:space="preserve">
+                  <path class="user-menu__icon_color_yellow" fill="#272525" d="M0.032,12h12.937c-0.163-2.643-2.074-4.837-4.671-5.543C9.306,5.846,9.985,4.75,9.985,3.485
+                  C9.985,1.561,8.425,0,6.5,0S3.015,1.561,3.015,3.485c0,1.264,0.68,2.361,1.688,2.972C2.106,7.163,0.194,9.357,0.032,12z"/>
+                </svg>Войти</a>
+              </div>
+              <div class="footer__compare-link compare-link">
+                <a class="compare-link_button compare-link__button_color_white" href="#">
+                  <svg class="compare-link__icon compare-link__icon_color_yellow" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  width="10px" height="10px" viewBox="0 0 10 10" enable-background="new 0 0 10 10" xml:space="preserve">
+                  <rect x="8" y="2" width="1.984" height="8"/>
+                  <rect y="3" width="1.984" height="7"/>
+                  <rect x="4" width="2" height="10"/>
+                </svg>Сравнить</a>
+              </div>
+              <div class="footer__kart-link kart-link">
+                <a class="kart-link__button kart-link__button_color_white" href="#">
+                  <svg class="kart-link__icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  width="12px" height="12px" viewBox="0 0 12 12" enable-background="new 0 0 12 12" xml:space="preserve">
+                  <g>
+                    <path class="kart-link__icon_color_yellow" d="M11.864,3.017c-0.082-0.098-0.203-0.154-0.327-0.154H9.225V4.09c0,0.563-0.484,1.022-1.08,1.022
+                    c-0.594,0-1.078-0.458-1.078-1.022V2.863H4.909V4.09c0,0.563-0.485,1.022-1.08,1.022c-0.595,0-1.078-0.458-1.078-1.022V2.863H0.438
+                    c-0.125,0-0.243,0.056-0.327,0.154C0.028,3.115-0.012,3.245,0.003,3.375l0.776,7.134c0.015,0.806,0.642,1.455,1.411,1.455h7.595
+                    c0.77,0,1.396-0.649,1.411-1.455l0.776-7.134C11.987,3.245,11.946,3.115,11.864,3.017z"/>
+                    <path class="kart-link__icon_color_yellow" d="M3.829,4.499c0.239,0,0.433-0.184,0.433-0.409V1.84c0-0.632,0.672-1.022,1.295-1.022h1.079
+                    c0.655,0,1.078,0.401,1.078,1.022v2.25c0,0.225,0.194,0.409,0.431,0.409c0.239,0,0.433-0.184,0.433-0.409V1.84
+                    C8.577,0.773,7.761,0,6.636,0H5.557C4.367,0,3.398,0.826,3.398,1.84v2.25C3.398,4.315,3.592,4.499,3.829,4.499z"/>
+                  </g>
+                </svg>
+              Корзина</a>
+            </div>
+          </div>
+          <p class="phone">Тел.: +7 (495) 495-95-95</p>
+          <p class="footer__site-developed"><a class="site-developed" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Разработчик сайта HTML Academy">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+              <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
+            </svg></a></p>
+          </div>
         </div>
       </div>
-      <p class="phone">Тел.: +7 (495) 495-95-95</p>
-      <p class="main-footer__site-developed"><a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Разработчик сайта HTML Academy">Сайт разработан...</a></p>
-    </div>
-  </footer>
-</body>
-</html>
+    </footer>
+  </body>
+  </html>
