--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="format-detection" content="telephone=no">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/normolize.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
@@ -29,7 +30,8 @@
     </div>
      <div class="header-main">
       <ul class="header-main__site-navigation site-navigation">
-        <li class="site-navigation__item site-navigation-item"><a class="site-navigation__link" href="#" aria-label="Каталог товаров">Каталог товаров</a>
+        <li class="site-navigation__item site-navigation-item">
+          <a class="site-navigation__link submenu-link" href="#" aria-label="Каталог товаров">Каталог товаров</a>
           <div class="site-navigation-item__submenu">
             <div class="site-navigation-item__submenu-item">
               <a class="site-navigation__link" href="#">Виртуальная реальность</a>
@@ -256,5 +258,15 @@
       </div>
     </footer>
   </main>
+  <script>
+    if (document.querySelector(".site-navigation-item__submenu") !== null) {
+      var submenu = document.querySelector(".site-navigation-item__submenu");
+      var submenu_link = document.querySelector(".submenu-link");
+      submenu_link.addEventListener("click", function(evt) {
+        evt.preventDefault();
+        submenu.classList.toggle("submenu-show");
+      })
+    }
+  </script>
 </body>
 </html>
