--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <label class="slider-toggle__slide_3" for="slide-3-toggle"></label>
       </div>
       <div class="promo-slider__slide slide">
-        <img class="slide__product-image" class="" src="img/promo-slider/image-selfie.png" width="384" height="486" alt="Избражение селфи-палки">
+        <img class="slide__product-image" src="img/promo-slider/image-selfie.png" width="384" height="486" alt="Избражение селфи-палки">
         <div class="slide__content">
           <p class="slide__slogan">Делай селфи, как Бен Стиллер!</p>
           <p class="slide__description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
@@ -167,7 +167,7 @@
         <h2 class="visually-hidden">Популярные бренды</h2>
         <ul class="popular-brands__list brands-list">
           <li class="brands-list__item"><a class="brands-list__link" href="#"><img class="brands-list__image" src="img/brands/dji.png" width="260" height="100" alt="логотип бренда DJI"></a></li>
-          <li class="brands-list__item"><a class="brands-list__link" href="#"><img class="brands-list__image" src="img/brands/sp-gadgets.png" width=260" height="100" alt="логотип бренда SP-Gadgets"></a></li>
+          <li class="brands-list__item"><a class="brands-list__link" href="#"><img class="brands-list__image" src="img/brands/sp-gadgets.png" width="260" height="100" alt="логотип бренда SP-Gadgets"></a></li>
           <li class="brands-list__item"><a class="brands-list__link" href="#"><img class="brands-list__image" src="img/brands/gopro.png" width="260" height="100" alt="логотип бренда Gopro"></a></li>
           <li class="brands-list__item"><a class="brands-list__link" href="#"><img class="brands-list__image" src="img/brands/vive.png" width="260" height="100" alt="логотип бренда Vive"></a></li>
         </ul>
@@ -189,7 +189,7 @@
         <section class="contacts">
           <h2 class="contacts__title">Контакты</h2>
           <p class="contacts__content contacts__content_last-margin">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-          <a class="contacts__map-link" href="#"><img class="contacts__map-image" src="img/contacts/map.jpg" width="" height="" alt="Магазин расположен по адресу г. Москва, ул. Строителей, 15"></a>
+          <a class="contacts__map-link" href="#"><img class="contacts__map-image" src="img/contacts/map.jpg" width="560" height="222" alt="Магазин расположен по адресу г. Москва, ул. Строителей, 15"></a>
           <a class="contacts__link button" href="#">Напишите нам</a>
         </section>
       </div>
@@ -217,14 +217,14 @@
             <div class="footer__buttons">
               <div class="footer__user-menu user-menu">
                 <a class="user-menu__button user-menu__button_color_white" href="#">
-                  <svg class="user-menu__icon"  version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="13px" height="12px" viewBox="0 0 13 12" enable-background="new 0 0 13 12" xml:space="preserve">
+                  <svg class="user-menu__icon"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="13px" height="12px" viewBox="0 0 13 12" enable-background="new 0 0 13 12" xml:space="preserve">
                     <path class="user-menu__icon_color_yellow" fill="#272525" d="M0.032,12h12.937c-0.163-2.643-2.074-4.837-4.671-5.543C9.306,5.846,9.985,4.75,9.985,3.485
                     C9.985,1.561,8.425,0,6.5,0S3.015,1.561,3.015,3.485c0,1.264,0.68,2.361,1.688,2.972C2.106,7.163,0.194,9.357,0.032,12z"/>
                   </svg>Войти</a>
                 </div>
                 <div class="footer__compare-link compare-link">
                   <a class="compare-link_button compare-link__button_color_white" href="#">
-                    <svg class="compare-link__icon compare-link__icon_color_yellow" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg class="compare-link__icon compare-link__icon_color_yellow" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     width="10px" height="10px" viewBox="0 0 10 10" enable-background="new 0 0 10 10" xml:space="preserve">
                     <rect x="8" y="2" width="1.984" height="8"/>
                     <rect y="3" width="1.984" height="7"/>
@@ -233,7 +233,7 @@
                 </div>
                <div class="footer__kart-link kart-link">
                 <a class="kart-link__button kart-link__button_color_white" href="#">
-                  <svg class="kart-link__icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  <svg class="kart-link__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                   width="12px" height="12px" viewBox="0 0 12 12" enable-background="new 0 0 12 12" xml:space="preserve">
                   <g>
                     <path class="kart-link__icon_color_yellow" d="M11.864,3.017c-0.082-0.098-0.203-0.154-0.327-0.154H9.225V4.09c0,0.563-0.484,1.022-1.08,1.022
@@ -250,7 +250,7 @@
           </div>
             <p class="phone">Тел.: +7 (495) 495-95-95</p>
             <p class="footer__site-developed"><a class="site-developed" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Разработчик сайта HTML Academy">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
                 <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
               </svg></a></p>
             </div>
